feat: initial project scaffold

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 
 ## User settings
 xcuserdata/
+.DS_Store
+*.xcworkspace/
+DerivedData/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
@@ -88,3 +91,9 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# Compiled Swift files
+*.swiftdoc
+*.swiftmodule
+*.swiftdoc
+*.swiftdoc
